update README and NEWS

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,4 +13,16 @@ knitr::opts_chunk$set(
 ```
 
 # TregaTa
-Auxilary package for the TregaTa project
+
+## Overview
+tregata will be a (meta-)package for waterchemistry and gasflux calculations.
+It is initially designed for the TregaTa Project and may include some project related functions at early stages.
+
+## Installation
+
+```{r, eval = FALSE}
+# The package is not yet released on CRAN.
+# Development version from GitHub:
+# install.packages("devtools")
+devtools::install_github("tekknosol/tregata")
+```
