--- a/README.Rmd
+++ b/README.Rmd
@@ -17,8 +17,13 @@ library(dplyr)
 # TregaTa
 
 ## Overview
-tregata will be a (meta-)package covering waterchemistry, waterphysics and gasflux calculations.
+tregata is a (meta-)package providing routines for waterchemistry, waterphysics and gasflux calculations.
 It was initially designed for the TregaTa Project and may include some project related functions at early stages.
+
+To calculate gasfluxes from high frequency chamber measurements, tregata supports two devices with two `read_` and `process_` functions:
+
+* `read_gasmet()` & `process_gasmet()`: GASMET
+* `read_losgatos()` & `process_losgatos()`: LosGatos
 
 ## Installation
 
@@ -32,13 +37,11 @@ devtools::install_github("tekknosol/tregata")
 ## Getting started
 Calculate fluxes from device records and a meta file containing information about single measurements.
 
-First check preprocessed data:
-```{r, eval = TRUE}
-data("gasmet", "meta")
-flux_raw <- process_gasmet(gasmet, meta, pre=T)
-glimpse(flux_raw)
-```
-Compute fluxes with:
 ```{r, eval = FALSE}
+# read data
+gasmet <- read_gasmet("path/to/gasmet_file.txt")
+meta <- read_csv("path/to/meta_file.csv")
+
+# compute fluxes
 flux <- process_gasmet(gasmet, meta)
 ```
