--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(
   comment = "#>",
   fig.path = "README-"
 )
-library(tregata)
+library(glimmr)
 library(dplyr)
 ```
 
@@ -50,4 +50,13 @@ meta <- read_csv("path/to/meta_file.csv")
 
 # compute fluxes
 flux <- process_gasmet(gasmet, meta)
+```
+
+Calculate gas transfer coefficient used with the Boundary Layer Equation (BLE).
+
+```{r}
+windspeed <- c(2, 4.3, 1.8)
+watertemperature <- c(18, 21, 19.3)
+
+calc_kW(windspeed, watertemperature)
 ```
