--- a/vignettes/glimmr.Rmd
+++ b/vignettes/glimmr.Rmd
@@ -58,10 +58,9 @@ meta_losgatos
 To use any arbitrary device all columns containing used information need to be
 defined.
 ```{r, eval=FALSE}
-process_chamber(
-  # specify data
-  losgatos, 
-  meta_losgatos,
+
+# setup analyzer
+analyzer <- gals(
   #define datastructure
   time_stamp = "Time", 
   conc_columns = c(CH4 = "[CH4]_ppm", CO2 = "[CO2]_ppm"), 
@@ -78,6 +77,15 @@ process_chamber(
   V = 0.01461, 
   A = 0.098
 )
+
+# compute fluxes
+process_chamber(
+  # specify data
+  data = losgatos, 
+  meta = meta_losgatos,
+  #specify analyzer
+  analyzer = analyzer
+)
 ```
 
 For simplification, GASMET and LosGatos can be called via convenient
@@ -90,5 +98,5 @@ process_gasmet(gasmet, meta_gasmet)
 ```
 
 While the start of single measurements is (usually) defined by a known point
-in time, the end can be defined in different ways. See `process_chamber()` for 
+in time, the end can be defined in different ways. See `proces_chamber()` for 
 details.
