update vignette titles

--- a/vignettes/gals.Rmd
+++ b/vignettes/gals.Rmd
@@ -2,7 +2,7 @@
 title: "Gas analyzer setup"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Gas analyzer setup}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
