--- a/vignettes/gals.Rmd
+++ b/vignettes/gals.Rmd
@@ -33,9 +33,9 @@ This vignette summarises the options for setting up options specified with gals(
   * **manual_temperature** Column conatining an additional measured temperature.
     If specified, the `temperature` value is ommited. 
   
-  * **offset** (Default = 0). Column containing the number of datapoints skipped at the beginning of the  data chunk (e.g. `offset`). 
+  * **offset** (Default = `0:0`). Colon separated value for offsetting the datasets. First value offsets the first, second value offsets the last datapoint. Positive values shrinken the dataset i.e `2:3` skips two datapoints at the beginning and truncates three datapoints at the end of the dataset. Negative values expand the dataset i.e. `-2:-3` add two datapoints at the beginning and three datapoints at the end of the dataset. 
   
-    Alternatively a single number applied as offset to all measurements (e.g. `2`).
+Alternatively name of column containing the value for each measurement individually (e.g. `offset`). 
   
   * **duration_count** If TRUE, `end` is determined by the number of datapoints 
     within each measurement. If FALSE, `end` is treated as duration or point in time.  
