--- a/vignettes/glimmr.Rmd
+++ b/vignettes/glimmr.Rmd
@@ -50,32 +50,33 @@ Single LosGatos files, as well as directories containing zips and txt files are
 supported. See `read_losgatos()` for details.
 
 The structure of corresponding metdata is defined as follows:
-```{r echo=-1}
+```{r echo=TRUE}
 meta_gasmet
+
 meta_losgatos
 ```
 
 ## Process fluxes
 To use any arbitrary device all columns containing used information need to be
 defined.
-```{r, eval=FALSE}
+```{r, eval=TRUE}
 
 # setup analyzer
-analyzer <- gals(
+custom_analyzer <- analyzer(
   #define datastructure
-  time_stamp = "Time", 
-  conc_columns = c(CH4 = "[CH4]_ppm", CO2 = "[CO2]_ppm"), 
-  preassure = "GasP_torr", 
-  temperature = "AmbT_C", 
-  time_proc = trim_time,
+  time_stamp = "Time",
+  conc_columns = c(CH4 = "[CH4]_ppm", CO2 = "[CO2]_ppm"),
+  preassure = "GasP_torr",
+  preassure_factor = 1.33322,
+  temperature = "AmbT_C",
+  trimmer = trim_time,
   # define metadata structure
   spot = "spot",
   day = "day",
   start = "start",
   end = "end",
-  manual_temperature = "t_start",
   #define chamber dimensions
-  V = 0.01461, 
+  V = 0.01461,
   A = 0.098
 )
 
@@ -85,7 +86,7 @@ process_chamber(
   data = losgatos, 
   meta = meta_losgatos,
   #specify analyzer
-  analyzer = analyzer
+  analyzer = custom_analyzer
 )
 ```
 
