--- a/README.Rmd
+++ b/README.Rmd
@@ -64,5 +64,6 @@ windspeed <- c(2, 4.3, 1.8)
 # Water temperature in °C
 watertemperature <- c(18, 21, 19.3) 
 
+# Calculate gas transfer coefficient
 calc_kW(windspeed, watertemperature)
 ```
