--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,8 @@ library(glimmr)
 library(dplyr)
 ```
 
-# glimmr
+# glimmr <a href='https://tekknosol.github.io/glimmr/'><img src='man/figures/logo.png' align="right" height="139" /></a>
+
 Gas fLuxes and dynamIc chaMber MeasuRements
 
 [![tidyverse_lifecycle_badge](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
