--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ library(dplyr)
 
 # glimmr <a href='https://tekknosol.github.io/glimmr/'><img src='man/figures/logo.png' align="right" height="139" /></a>
 
-Gas fLuxes and dynamIc chaMber MeasuRements
+**G**as F**l**uxes and Dynam**i**c Cha**m**ber **M**easu**R**ements
 
 <!-- badges: start -->
 [![tidyverse_lifecycle_badge](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
